apps/base/siyuan/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siyuan
  labels:
    app: siyuan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: siyuan
  template:
    metadata:
      labels:
        app: siyuan
    spec:
      containers:
        - name: siyuan
          image: b3log/siyuan:v3.8.0@sha256:a2da59a722da6a2243f0c2a99286d9c8e73cc47dbc8757cc81ffd1137d6461a0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6806
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - name: siyuan-workspace
              mountPath: /siyuan/workspace
      volumes:
        - name: siyuan-workspace
          persistentVolumeClaim:
            claimName: siyuan-workspace-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: siyuan
  labels:
    app: siyuan
spec:
  selector:
    app: siyuan
  ports:
    - name: http
      port: 6806
      targetPort: 6806
